trying to fix the overscrolling into a blank white space on mobile

--- a/src/UI/pages/dashboard/styles.scss
+++ b/src/UI/pages/dashboard/styles.scss
@@ -13,7 +13,7 @@
     background-color: var(--dashboard-BG);
 
     @include mobile {
-        height: unset;
+        height: 100%;
     }
 
     .dashboard-grid {
